Took my time with this one, I'm starting to work into implementing a `Files` module, dedicated to exporting files and loading files from the disk.
My plan is that anything related reading/writing to the disk, being exporting finished drawings as pngs or saving them to keep editing later will be done in this module.

Files:
- Right now, all the file I/O related stuff will live in this module

Canvas:
- I declared a new struct `CanvasData` inside the `canvas.hpp` header, purposed to hold the state of `Canvas` object.

- New function `Canvas::_getData(CanvasData&)` used to write the `Canvas` state into a `CanvasData` object.

- Declared  a new (right now empty) constructor which only takes a `CanvasData&`, to load a previous `Canvas` state

- Fixed `Canvas::_exportImage()`, which would not worked correctly due to how the `Canvas` is now rendered to the screen using `canvasView` space

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,14 @@
 *. Invent an scalable UI (or find a lib that does that for you lol) { X }
-*. Add options to select different colors
+*. Add options to select different colors { X }
 
-*. Add support for different brushes:
-    *. Create different brushes (*)
-    *. Find a way to change all this brushes seamlessly
+*. Add support for different brushes: { X }
+    *. Create different brushes { X }
+    *. Find a way to change between brushes seamlessly 
 
-*. Create a dedicated Import/Export module for Canvases to Pngs
+
+(vvv This should be my main thing now vvv)
+
+*. Create a dedicated Import/Export module for Canvases
+    *. Add support on Canvas to be creates from images
+    *. Create a format that could allow saving and reloading of canvas data
+    *. 
